2008-03-28 Paul Ramsey <pramsey@cleverelephant.ca>

        * lwgeom/lwgeom_kml.c, lwgeom/lwpostgis.sql.in
          Added patch from Eduin Carillo to enhance KML
          support. 
          http://code.google.com/p/postgis/issues/detail?id=17

2008-03-28 Paul Ramsey <pramsey@cleverelephant.ca>

        * doc/postgis.xml, lwgeom/lwgeom_svn.c,
          Added patch from Marco Hugentobler to enhance SVG 
          support. 2008-February/002883.html

2008-03-28 Paul Ramsey <pramsey@cleverelephant.ca>

        * Makefile.config.in, configure.in, lwgeom/Makefile, 
          lwgeom/lwpostgis.sql.in, lwgeom/lwgeom_geos_c.c
          Changed GEOS version checking to use geos-config, and
          set a GEOS_VERNUM macro that compresses the version string
          into an integer: 2.2.1 = 22, 3.1.1 = 31, etc.
        * Placed GEOS 3.0 and 3.1 dependent functions into 
          appropriate macro blocks.

2008-02-12 Paul Ramsey <pramsey@cleverelephant.ca>

	* lwgeom/lwgeom_geos_c.c, lwgeom/lwpostgis.sql.in: Add in hook to 
          GEOSTopologyPreserveSimplify

---------  PostGIS-1.3.2 release [2007-12-01] --------------------------

2007-11-30 Mark Cave-Ayland <mark.cave-ayland@ilande.co.uk>

	* lwgeom/lwgparse.c: Fix the (E)WKB parser so that it performs
	  validation checks in the same way as the WKT parser, e.g. ensure
	  POLYGON rings are closed, LINESTRINGs consist of at least 2
	  points and that curves have at least 3 points.

2007-11-27 Mark Cave-Ayland <mark.cave-ayland@ilande.co.uk>

	* lwgeom/liblwgeom.h, lwgeom/lwcurve.c, lwgeom/lwgeom_api.c,
	  lwgeom/lwgeom_pg.c, lwgeom/lwline.c, lwgeom/lwpoint.c,
	  lwgeom/lwpoly.c: Rename the existing get_int32() and
	  get_uint32() functions to lw_get_int32() and lw_get_uint32()
	  respectively in order to avoid a collision with functions of the
	  same name in newer versions of OS X.

2007-11-27 22:19  mcayland

	* lwgeom/lwgeom_transform.c: Extend the PROJ.4 search path to